Revision history for C and Perl extension of nfdump.

1.08 2015-05-xx
	- c: examples/lnf_ex04_threads option -n added 
	- perl: nfasnupd accepts -c <file> with additional prefix database 

1.07 2015-03-17
	- c: nfdumpp utility added
	- c: added calculated items - duration, bps, pps, bpp
	- c: lnf_fld_info added 
	- c: lnf_fld_parse added 
	- c: lnf_mem_fastaggr added
	- c: lnf_info extended
	- c: performance update (15-20%)
	- c: thread support for filter operations (not released to public)
	- perl: static library removed from build tree (Bug #101544) 
	- perl: nf_asn_geo_update and download_asn_db removed
	- perl: bin/nfasnupd - ASn updater added (replacement for nf_asn_geo_update)
	- perl: doc update 

1.06 2014-12-06
	- c: lnf_rec_fget lnf_rec_fset performance update (15%)
	- c: added src/fields.c,h - code related to fields is now separated 
	- perl: build system update 

1.05 2014-12-05
	- c: build system update 
	- c: added --enable-threads for thread support; disabled by default
	- c: flex, bison is not needed for building 
	- c: adjusted to nfdump 1.6.13

1.04 2014-11-17
	- perl: added example examples/example2.pl 
	- perl: added test 08-aggreg-sort.t 
	- perl: aggregation and sorting added into 
	  Net::NfDump (Aggreg => 1 and SortBy => <field> attributes)
	- c: lnf_field_t structure extended with default sort and 
	  aggregation order 
	- c: added example lnf_ex04_threads.c 
	- c: threads support added for paralel processing flow 
	  records in aggregation. Code not released for public,
	  the public version works properly only in sigle 
	  thread enviroment.
	- c: added example lnf_ex03_aggreg.c 
	- c: added lnf_mem object with aggregation and sorting capability 
	- c: lnf_rec_fget, lnf_rec_fset incerased prtformance (30%) 
	  Thanks to Vasek Bartos.

1.03 2014-06-23
	- c: headers includes in the examples
	- c: code preparation for aggregation and sorting
	- perl: test for pure read withour record processing (-G)

1.02 2014-06-18