@@ -1,6 +1,9 @@
 Revision history for C and Perl extension of nfdump.
 
 1.08 2015-05-xx
+	- c: initial number of buckets in hash table increased to 500000
+	- c: new functions lnf_mem_read_raw, lnf_mem_write_raw added
+	- c: examples/lnf_ex05_memtrans added
 	- c: examples/lnf_ex04_threads option -n added 
 	- perl: nfasnupd accepts -c <file> with additional prefix database 
 
